--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -122,6 +122,7 @@ def enableHermes = project.ext.react.get("enableHermes", false);
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
+    ndKVersion "22.0.7026061"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
