--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -122,7 +122,7 @@ def enableHermes = project.ext.react.get("enableHermes", false);
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    ndKVersion "22.0.7026061"
+    ndkVersion '21.0.6113669'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -136,7 +136,6 @@ android {
         versionCode 1
         versionName "1.0"
         testBuildType System.getProperty('testBuildType', 'debug')  // This will later be used to control the test apk build type for detox
-        ndKVersion "22.0.7026061"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     splits {
