--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-config": "0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
