--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.62.2",
+    "react-i18next": "^10.11.4",
+    "react-native": "0.63.2",
     "react-native-config": "0.11.7"
   },
   "devDependencies": {
