--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ commands:
       - run:
           name: Getting cocoapods dependencies
           working_directory: ./ios
-          command: bundle exec pod install --deployment
+          command: bundle exec pod install
       - save_cache:
           name: Save cocoapods specs and pods cache
           key: v1-cocoapods-{{ checksum "./ios/Podfile.lock" }}-{{ arch }}
