--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -248,6 +248,7 @@ jobs:
       xcode: 11.3.1
     steps:
       - echo $CIRCLE_BUILD_NUM > buildnum.js
+      - cat buildnum.js
       - persist_to_workspace:
           root: .
           paths: 
