--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,8 +245,9 @@ jobs:
           path: ./test-reports
 
   build-placeholder:
-    macos:
-      xcode: 11.3.1
+    docker: # executor type
+      - image: buildpack-deps:trusty
+    resource_class: small
     steps:
       - run: echo $CIRCLE_BUILD_NUM > buildnum.js
       - run: cat buildnum.js
